added text of my bio to the layout page

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,13 +18,18 @@ html(lang="en" dir="ltr")
         .dev-intro-box
 
           //- Replace with your name
-          h5 Name
+          h5 Rose Delva
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p Description
+          p Hello! My name is Rose and I like to solve problems. Especially when it involves the person between the keyboard/tablet and the chair. Trying to understand someone’s mindset when they interacting technology is a concept some developers or designers often overlook.
+
+          p Graduated with a Bachelors in Computer Science. I ventured out into the world acquiring many skills and life-lessons underneath my belt.
+
+          p With years of experience (customer service, tech support, web development along with QA (quality assurance). I'm able to communicate with developers and designers as well as taking the time to understand the user experience when it comes accessing, using and creating content.
+
 
           //- Add path from your '/about' route handler to the href below
-          a(href='') Learn More &rarr;
+          a(href='/about') Learn More &rarr;
 
     .wrapper
       .header
@@ -32,7 +37,7 @@ html(lang="en" dir="ltr")
           button#menu-icon.menu-icon(type='button' data-toggle='my-info')
 
           //- Replace with your name — this is for the mobile layout
-          span Name
+          span Rose Delva
 
       block content
 
