--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,11 +21,7 @@ html(lang="en" dir="ltr")
           h5 Rose Delva
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p Hello! My name is Rose and I like to solve problems. Especially when it involves the person between the keyboard/tablet and the chair. Trying to understand someone’s mindset when they interacting technology is a concept some developers or designers often overlook.
-
-          p Graduated with a Bachelors in Computer Science. I ventured out into the world acquiring many skills and life-lessons underneath my belt.
-
-          p With years of experience (customer service, tech support, web development along with QA (quality assurance). I'm able to communicate with developers and designers as well as taking the time to understand the user experience when it comes accessing, using and creating content.
+          p Hello! My name is Rose and I like to solve problems. Especially when it involves the person between the keyboard/tablet and the chair.
 
 
           //- Add path from your '/about' route handler to the href below
