inital commit and moved the description to this page

--- a/views/about.pug
+++ b/views/about.pug
@@ -21,8 +21,11 @@ block content
         .about-bio
 
           //- Replace the boilerplate below with your best elevator pitch
-          p This is my elevator pitch. It is the elevator pitch to end all elevator pitches. Your mind is blown. Your mortal brain can scarcely process how well my prior experience maps to your open dev position. 
+          p Trying to understand someone’s mindset when they interacting technology is a concept some developers or designers often overlook.
 
+          p Graduated with a Bachelors in Computer Science. I ventured out into the world acquiring many skills and life-lessons underneath my belt.
+
+          p With years of experience (customer service, tech support, web development along with QA (quality assurance). I'm able to communicate with developers and designers as well as taking the time to understand the user experience when it comes accessing, using and creating content.
 
       .skills-contact-box.box
         h6 Skills
