--- a/views/index.pug
+++ b/views/index.pug
@@ -28,7 +28,7 @@ block content
 
       each project in projects
          .cell
-          a(href='#')
+          a(href=`/project/${project.id}`)
             img.thumbnail(src=`${project.image_urls[0]}`)
             h5= project.project_name
 
