--- a/views/project.pug
+++ b/views/project.pug
@@ -34,9 +34,11 @@ block content
     .project-img-box.box
 
       //- Replace the URLs in the src attributes below with interpolated template literals to dynamically add your project images, and add descriptions to the alt attributes
-      img.project-img(src=`../${project.image_urls[1]}`, alt='')
-      img.project-img(src=`../${project.image_urls[2]}`, alt='')
-      img.project-img(src=`../${project.image_urls[3]}`, alt='')
+      img.project-img(src=`../${project.image_urls[1]}`, alt=`${project.description}`)
+      img.project-img(src=`../${project.image_urls[2]}`, alt=`${project.description}`)
+      img.project-img(src=`../${project.image_urls[3]}`, alt=`${project.description}`)
+
+    
 
     nav.nav
       a(href='/')
