--- a/views/about.pug
+++ b/views/about.pug
@@ -34,9 +34,12 @@ block content
         ul
           li HTML
           li CSS
+          li SASS 
           li JavaScript
-          li Git and GitHub
+          li jQuery
+          li Git
           li VS Code
+          li Bash
           li Accessibility
           li OOP
           li Fetch and Public APIs
@@ -52,9 +55,9 @@ block content
           li email@email.com
 
         //- Add URLs to the hrefs below to link to your social media accounts - feel free to use non-personal links to social media home pages if you prefer
-        a.btn-link(href='') LinkedIn
-        a.btn-link(href='') GitHub
-        a.btn-link(href='') Twitter
+        a.btn-link(href='https://www.linkedin.com/in/rosedelva/') LinkedIn
+        a.btn-link(href='https://github.com/rdelva') GitHub
+        //-a.btn-link(href='') Twitter
 
     nav.nav
       a(href='/')
