--- a/views/project.pug
+++ b/views/project.pug
@@ -28,8 +28,8 @@ block content
             li= technology 
 
         //- Add the href values to the links below
-        a.btn-link(href='') Live Demo
-        a.btn-link(href='') GitHub Repo
+        a.btn-link(href=`${project.live_link}`) Live Demo
+        a.btn-link(href=`${project.github_link}`) GitHub Repo
 
     .project-img-box.box
 
