--- a/views/error.pug
+++ b/views/error.pug
@@ -2,6 +2,11 @@ extends layout.pug
 
 block content
 
+  nav.nav
+    a(href='/')
+      span &larr;
+      |  Back
+
   article.portfolio-intro
 
     h1= error.status
