--- a/views/page-not-found.pug
+++ b/views/page-not-found.pug
@@ -2,6 +2,12 @@ extends layout.pug
 
 block content
 
+  nav.nav
+    a(href='/')
+      span &larr;
+      |  Back
+
+      
   article.portfolio-intro
 
     h1= error.status
