customize text and styles

--- a/views/about.pug
+++ b/views/about.pug
@@ -12,7 +12,7 @@ block content
       .about-intro-box.box
 
         //- Replace with your name
-        h1 Rose Delva
+        h1.name Rose Delva
 
         //- Feel free to personalize the title below
         p Full Stack JavaScript Developer
