change text in alt in line 18

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -15,7 +15,7 @@ html(lang="en" dir="ltr")
       .sidebar-info-box
         br
         .thumbnail-box
-          img.thumbnail(src='/static/images/me.png', alt='I thought this photo was cute')
+          img.thumbnail(src='/static/images/rose.svg', alt='Rose icon')
         .dev-intro-box
 
           //- Replace with your name
