--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,8 @@ html(lang="en" dir="ltr")
     link(rel='stylesheet', href='/static/css/normalize.css')
     link(rel='stylesheet', href='/static/css/styles.css')
     link(rel='stylesheet', href='/static/css/style_addon.css')
+    link(rel='icon', type='image/x-icon' href='/static/images/favicon.ico')
+
 
   body
     #my-info.sidebar
