added the word sitting to the description paragraph

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -24,7 +24,7 @@ html(lang="en" dir="ltr")
           h5 Rose Delva
 
           //- Replace with description of who you are, what you do, and why you are so awesome
-          p Hello! My name is Rose and I like to solve problems. Especially when it involves the person between the keyboard/tablet and the chair.
+          p Hello! My name is Rose and I like to solve problems. Especially when it involves the person sitting between the keyboard/tablet and the chair.
 
 
           //- Add path from your '/about' route handler to the href below
