--- a/views/about.pug
+++ b/views/about.pug
@@ -18,7 +18,7 @@ block content
 
         .about-bio
 
-          div Trying to understand someone’s mindset when they interacting technology is a concept some developers or designers often overlook. Graduated with a Bachelors in Computer Science. I ventured out into the world acquiring many skills and life-lessons underneath my belt.
+          div Trying to understand someone's mindset when they interacting technology is a concept some developers or designers often overlook. Graduated with a Bachelors in Computer Science. I ventured out into the world acquiring many skills and life-lessons underneath my belt.
 
           div With years of experience (customer service, tech support, web development along with QA (quality assurance). I'm able to communicate with developers and designers as well as taking the time to understand the user experience when it comes accessing, using and coding content.
 
